--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,3 +11,37 @@
     letter-spacing: 0px;
     color: #081836;
 }
+
+.header-search {
+    all: unset;
+    height: 67px;
+    width: 339px;
+    background-color: #F6F8FD;
+    border-radius: 20px;
+    padding: 0 28px;
+}
+
+.header-search::placeholder {
+    font-size: 20px;
+    color: #0C1834;
+    opacity: 0.4;
+}
+
+.header-actions-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 12px;
+}
+
+.header-button {
+    all: unset;
+    width: 67px;
+    height: 67px;
+    border-radius: 20px;
+    background-color: #F6F8FD;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
